🎉 Start : 강의1차(프로젝트 시작, 환경설정)

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xml:th = "http://www.thymeleaf.org">
+<html xmlns:th = "http://www.thymeleaf.org" lang="ko">
 <head>
     <meta http-equiv="content-type" content="text/html" charset="UTF-8">
     <title>Hello</title>
